--- a/src/EditorPrototype/MainWindow.xaml
+++ b/src/EditorPrototype/MainWindow.xaml
@@ -22,14 +22,38 @@
             <ColumnDefinition Width="*" MinWidth="100"/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
-        
-        <Border Grid.Row="0" Grid.Column="0" BorderThickness="1"  Margin="2" >
-            <controls1:ZoomControl x:Name="g_zoomctrl" >
-                <wpf:GraphAreaExample x:Name="g_Area" />
-            </controls1:ZoomControl>
-        </Border>
 
-        <DockPanel Grid.Column="1" Grid.Row="0">
+        <Grid Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <Border Grid.Row="0" BorderThickness="1"  Margin="2" >
+                <controls1:ZoomControl x:Name="g_zoomctrl" >
+                    <wpf:GraphAreaExample x:Name="g_Area" />
+                </controls1:ZoomControl>
+            </Border>
+
+            <!-- Need to be in different file, may be -->
+            <Grid Grid.Row="1">
+                <TabControl Grid.Row="1" Height="150" TabStripPlacement="Bottom">
+                    <TabItem Header="Messages">
+                        <ScrollViewer>
+                            <TextBox IsReadOnly="True" TextWrapping="Wrap" />
+                        </ScrollViewer>
+                    </TabItem>
+                    <TabItem Header="Errors">
+                        <ScrollViewer>
+                            <TextBox IsReadOnly="True" TextWrapping="Wrap" />
+                        </ScrollViewer>
+                    </TabItem>
+                </TabControl>
+            </Grid>
+
+        </Grid>
+
+        <DockPanel Grid.Column="1">
             <Grid x:Name="rightPanel">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" MinHeight="100"/>
@@ -55,6 +79,6 @@
                 </DataGrid>
             </Grid>
         </DockPanel>
-
+        
     </Grid>
 </Window>
