--- a/src/EditorPrototype/MainWindow.xaml
+++ b/src/EditorPrototype/MainWindow.xaml
@@ -26,24 +26,29 @@
         </Grid.ColumnDefinitions>
 
         <!-- Column = 0 -->
+        <!-- Area and console -->
         <Grid Grid.Column="0">
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" MinHeight="50"/>
             </Grid.RowDefinitions>
 
             <!-- Area -->
             <Border Grid.Row="0" BorderThickness="1"  Margin="2">
-                <controls1:ZoomControl x:Name="g_zoomctrl" Margin="1,1,-1,-1" >
+                <controls1:ZoomControl x:Name="g_zoomctrl" Margin="1,1,-1,-1">
                     <wpf:GraphAreaExample x:Name="g_Area" />
                 </controls1:ZoomControl>
             </Border>
 
+            <!-- GridSplitter for console -->
+            <GridSplitter Grid.Row ="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Background="Aqua" Height="5"/>
+            
             <!-- Console -->
-            <!-- Need to be in different file, may be -->
-            <Grid Grid.Row="1">
-                <TabControl Height="150" TabStripPlacement="Bottom">
+            <!-- Need to be in different files, may be -->
+            <Grid Grid.Row="2">
+                <TabControl TabStripPlacement="Bottom">
                     <TabItem Header="Messages">
                         <ScrollViewer>
                             <TextBox IsReadOnly="True" TextWrapping="Wrap" />
@@ -60,26 +65,26 @@
         </Grid>
 
         <!-- Colunm = 1 -->
-        <!-- GridSplitter -->
-        <GridSplitter Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="10"/>
+        <!-- GridSplitter for RightPannel-->
+        <GridSplitter Grid.Column="1" Grid.Row ="1" VerticalAlignment="Stretch" HorizontalAlignment="Center" Background="Aqua" Width="5"/>
 
         <!-- Column = 2 -->
         <!-- RightPannel -->
         <DockPanel Grid.Column="2">
             <Grid x:Name="rightPanel">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" MinHeight="100"/>
+                    <RowDefinition Height="0"/>
                     <RowDefinition Height="Auto" MinHeight="70"/>
                     <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
                     <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto" MinHeight="100"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto" MinHeight="50"/>
                 </Grid.RowDefinitions>
 
                 <Grid x:Name="paletteGrid" Grid.Row="1" Grid.Column="1"/>
 
                 <Label x:Name="elementsListLabel" Grid.Row="2" Content="Elements:" HorizontalAlignment="Stretch"/>
-                <ListBox x:Name="elementsListBox" Grid.Row="3" Margin="0,20,0,0"/>
+                <ListBox x:Name="elementsListBox" Grid.Row="3"/>
                 <Label x:Name="selectedEntityLabel" Grid.Row="4" Content="Selected entity:" HorizontalAlignment="Stretch" />
 
                 <DataGrid x:Name="attributesView" Grid.Row="5" IsReadOnly="True" ItemsSource="{Binding Attributes}" AutoGenerateColumns="False">
