--- a/src/EditorPrototype/MainWindow.xaml
+++ b/src/EditorPrototype/MainWindow.xaml
@@ -43,7 +43,7 @@
 
             <!-- GridSplitter for console -->
             <GridSplitter Grid.Row ="1" HorizontalAlignment="Stretch" VerticalAlignment="Center" Background="Aqua" Height="5"/>
-            
+
             <!-- Console -->
             <!-- Need to be in different files, may be -->
             <Grid Grid.Row="2">
@@ -78,21 +78,23 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto" MinHeight="50"/>
+                    <RowDefinition Height="Auto" MinHeight="31"/>
+                    <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <Grid x:Name="paletteGrid" Grid.Row="1" Grid.Column="1"></Grid>
-                <Label x:Name="elementsListLabel" Grid.Row="2" Content="Elements:" HorizontalAlignment="Stretch"/>
-                <ListBox x:Name="elementsListBox" Grid.Row="3"/>
-                <Label x:Name="selectedEntityLabel" Grid.Row="4" Content="Selected entity:" HorizontalAlignment="Stretch" />
+                <Grid x:Name="paletteGrid" Grid.Row="1" Margin="0,1,0,10"/>
+                <Label x:Name="elementsListLabel" Grid.Row="2" Content="Elements:" HorizontalAlignment="Stretch" Margin="0,2,0,1" Grid.RowSpan="2"/>
+                <ListBox x:Name="elementsListBox" Grid.Row="3" Margin="0,3,0,22" Grid.RowSpan="2"/>
+                <Label x:Name="selectedEntityLabel" Grid.Row="4" Content="Selected entity:" HorizontalAlignment="Stretch" Margin="0,4,0,77" Grid.RowSpan="2" />
 
-                <DataGrid x:Name="attributesView" Grid.Row="5" ItemsSource="{Binding Attributes}" AutoGenerateColumns="False">
+                <DataGrid x:Name="attributesView" Grid.Row="5" ItemsSource="{Binding Attributes}" AutoGenerateColumns="False" Margin="0,4,0,1">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Name" IsReadOnly="True" Binding="{Binding Name}"/>
                         <DataGridTextColumn Header="Type" IsReadOnly="True" Binding="{Binding Type}"/>
                         <DataGridTextColumn Header="Value" IsReadOnly="False" Binding="{Binding Value}"/>
                     </DataGrid.Columns>
                 </DataGrid>
-                <Grid>
+                <Grid Margin="0,0,0,69" Grid.RowSpan="2">
                     <Button Content="Constraints"
                             HorizontalAlignment="Left"
                             Margin="0,585,0,-505"
@@ -100,6 +102,7 @@
                             Width="118"
                             Click="ConstraintsButtonClick"/>
                 </Grid>
+                <Button x:Name="generateButton" Content="Generate" Margin="0,1,0,0" Grid.Row="6" Width="118" Height="30" Click="Button_Click"/>
             </Grid>
 
         </DockPanel>
