--- a/src/WpfEditor/Constraints/ConstraintsWindow.xaml
+++ b/src/WpfEditor/Constraints/ConstraintsWindow.xaml
@@ -25,7 +25,7 @@
             Margin="10,26,0,0"
             VerticalAlignment="Top"
             Width="147" SelectionChanged="ObjType_SelectionChanged" Grid.ColumnSpan="2">
-            <ComboBoxItem Name="edge">Edge</ComboBoxItem>
+            <ComboBoxItem Name="edge">EdgeViewModel</ComboBoxItem>
             <ComboBoxItem Name="node">Node</ComboBoxItem>
         </ComboBox>
         <TextBlock Text="Element Type:" Margin="10,53,0,97" Grid.ColumnSpan="2"/>
