--- a/src/WpfEditor/View/MainWindow.xaml
+++ b/src/WpfEditor/View/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WpfEditor.MainWindow" x:ClassModifier="internal"
+﻿<Window x:Class="WpfEditor.View.MainWindow" x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfEditor"
         xmlns:controls1="http://schemas.panthernet.ru/graphx/"
-        xmlns:models="clr-namespace:WpfEditor.Models"
+        xmlns:view="clr-namespace:WpfEditor.View"
         Title="REAL.NET"
         mc:Ignorable="d"
         Height="600" Width="800">
@@ -14,7 +14,7 @@
         <Grid.Resources>
             <ResourceDictionary>
                 <ResourceDictionary.MergedDictionaries>
-                    <ResourceDictionary Source="/Templates/GeneralTemplate.xaml"/>
+                    <ResourceDictionary Source="/View/Templates/GeneralTemplate.xaml"/>
                 </ResourceDictionary.MergedDictionaries>
             </ResourceDictionary>
         </Grid.Resources>
@@ -38,7 +38,7 @@
             <!-- Area -->
             <Border Grid.Row="0" BorderThickness="1"  Margin="2">
                 <controls1:ZoomControl x:Name="zoomControl" AllowDrop="True" Margin="1,1,-1,-1">
-                    <models:GraphAreaExample AllowDrop="True" x:Name="scene" />
+                    <view:GraphArea AllowDrop="True" x:Name="scene" />
                 </controls1:ZoomControl>
             </Border>
 
