--- a/src/WpfEditor/View/Templates/GeneralTemplate.xaml
+++ b/src/WpfEditor/View/Templates/GeneralTemplate.xaml
@@ -1,11 +1,7 @@
 ﻿<ResourceDictionary
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:WpfEditor"
-    xmlns:controls="http://schemas.panthernet.ru/graphx/"
-    xmlns:models="clr-namespace:WpfEditor.Models">
-
-    <models:ValueToImageConverter x:Key="ValueToImage"/>
+    xmlns:controls="http://schemas.panthernet.ru/graphx/">
 
     <ControlTemplate x:Key="NodeVertex"></ControlTemplate>
 
@@ -68,7 +64,7 @@
                               Stretch="Uniform" 
                               Fill="Black" 
                               IsHitTestVisible="True"
-                              ToolTip="This vertex has some self looped edges!"
+                              ToolTip="This vertex has some self looped edgeViewModels!"
                               Data="F1 M 17.4167,32.25L 32.9107,32.25L 38,18L 43.0893,32.25L 58.5833,32.25L 45.6798,41.4944L 51.4583,56L 38,48.0833L 26.125,56L 30.5979,41.7104L 17.4167,32.25 Z "/>
         </Grid>
     </ControlTemplate>
@@ -88,7 +84,7 @@
                               Stretch="Uniform" 
                               Fill="Blue" 
                               IsHitTestVisible="True"
-                              ToolTip="This vertex has some self looped edges!"
+                              ToolTip="This vertex has some self looped edgeViewModels!"
                               Data="F1 M 17.4167,32.25L 32.9107,32.25L 38,18L 43.0893,32.25L 58.5833,32.25L 45.6798,41.4944L 51.4583,56L 38,48.0833L 26.125,56L 30.5979,41.7104L 17.4167,32.25 Z "/>
         </Grid>
     </ControlTemplate>
@@ -111,7 +107,7 @@
                               Stretch="Uniform" 
                               Fill="Green" 
                               IsHitTestVisible="True"
-                              ToolTip="This vertex has some self looped edges!"
+                              ToolTip="This vertex has some self looped edgeViewModels!"
                               Data="F1 M 17.4167,32.25L 32.9107,32.25L 38,18L 43.0893,32.25L 58.5833,32.25L 45.6798,41.4944L 51.4583,56L 38,48.0833L 26.125,56L 30.5979,41.7104L 17.4167,32.25 Z "/>
         </Grid>
     </ControlTemplate>
@@ -134,7 +130,7 @@
                               Stretch="Uniform" 
                               Fill="Blue" 
                               IsHitTestVisible="True"
-                              ToolTip="This vertex has some self looped edges!"
+                              ToolTip="This vertex has some self looped edgeViewModels!"
                               Data="F1 M 17.4167,32.25L 32.9107,32.25L 38,18L 43.0893,32.25L 58.5833,32.25L 45.6798,41.4944L 51.4583,56L 38,48.0833L 26.125,56L 30.5979,41.7104L 17.4167,32.25 Z "/>
         </Grid>
     </ControlTemplate>
