Added labels to edges

--- a/src/EditorPrototype/Templates/GeneralTemplate.xaml
+++ b/src/EditorPrototype/Templates/GeneralTemplate.xaml
@@ -72,6 +72,14 @@
         </Grid>
     </ControlTemplate>
 
+    <ControlTemplate x:Key="Text" TargetType="{x:Type controls:EdgeLabelControl}">
+        <Grid>
+            <Border Background="{TemplateBinding Background}">
+                <ContentPresenter/>
+            </Border>
+        </Grid>
+    </ControlTemplate>
+
     <ControlTemplate x:Key="AssociationEdge" TargetType="{x:Type controls:EdgeControl}">
         <Grid>
             <Path Stroke="Blue"
@@ -81,6 +89,9 @@
             <controls:DefaultEdgePointer NeedRotation="true" x:Name="PART_EdgePointerForTarget" >
                 <Path Data="M0,0.5 L1,1 M1,0 L0,0.5" Stretch="Uniform" Width="15" Height="15" Stroke="Black" StrokeThickness="2"/>
             </controls:DefaultEdgePointer>
+
+            <controls:EdgeLabelControl x:Name="PART_edgeLabel" Content="{Binding Text}" />
+            
             <Path x:Name="PART_SelfLoopedEdge" 
                               Width="10" 
                               Height="10" 
@@ -94,7 +105,7 @@
 
     <ControlTemplate x:Key="AttributeEdge" TargetType="{x:Type controls:EdgeControl}">
         <Grid>
-            <Path Stroke="Green" 
+            <Path Stroke="DarkRed" 
                               StrokeThickness="1"
                               ToolTip="{TemplateBinding ToolTip}" 
                               x:Name="PART_edgePath"/>
@@ -102,7 +113,7 @@
                 <Path Data="M0,0.5 L1,1 M1,0 L0,0.5" Stretch="Uniform" Width="15" Height="15" Stroke="Black" StrokeThickness="2"/>
             </controls:DefaultEdgePointer>
 
-            <controls:EdgeLabelControl x:Name="PART_edgeLabel" Content="&lt;&lt;attribute&gt;&gt;" />
+            <controls:EdgeLabelControl x:Name="PART_edgeLabel" Content="{Binding Text}" />
 
             <Path x:Name="PART_SelfLoopedEdge" 
                               Width="10" 
@@ -125,7 +136,7 @@
                 <Path Data="M0,0.5 L1,1 M1,0 L0,0.5" Stretch="Uniform" Width="15" Height="15" Stroke="Black" StrokeThickness="2"/>
             </controls:DefaultEdgePointer>
 
-            <controls:EdgeLabelControl x:Name="PART_edgeLabel" Content="&lt;&lt;type&gt;&gt;" />
+            <controls:EdgeLabelControl x:Name="PART_edgeLabel" Content="{Binding Text}" />
 
             <Path x:Name="PART_SelfLoopedEdge" 
                               Width="10" 
