--- a/src/WpfEditor/View/MainWindow.xaml
+++ b/src/WpfEditor/View/MainWindow.xaml
@@ -1,10 +1,24 @@
-﻿<Window x:Class="WpfEditor.View.MainWindow" x:ClassModifier="internal"
+﻿<!-- 
+* Copyright 2017-2018 REAL.NET group
+
+* Licensed under the Apache License, Version 2.0 (the "License");
+* you may not use this file except in compliance with the License.
+* You may obtain a copy of the License at
+*
+* http://www.apache.org/licenses/LICENSE-2.0
+*
+* Unless required by applicable law or agreed to in writing, software
+* distributed under the License is distributed on an "AS IS" BASIS,
+* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+* See the License for the specific language governing permissions and
+* limitations under the License. -->
+    
+<Window x:Class="WpfEditor.View.MainWindow" x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfEditor"
-        xmlns:controls1="http://schemas.panthernet.ru/graphx/"
+        xmlns:graphx="http://schemas.panthernet.ru/graphx/"
         xmlns:view="clr-namespace:WpfEditor.View"
         Title="REAL.NET"
         mc:Ignorable="d"
@@ -37,9 +51,9 @@
 
             <!-- Area -->
             <Border Grid.Row="0" BorderThickness="1"  Margin="2">
-                <controls1:ZoomControl x:Name="zoomControl" AllowDrop="True" Margin="1,1,-1,-1">
+                <graphx:ZoomControl x:Name="zoomControl" AllowDrop="True" Margin="1,1,-1,-1">
                     <view:GraphArea AllowDrop="True" x:Name="scene" />
-                </controls1:ZoomControl>
+                </graphx:ZoomControl>
             </Border>
 
             <!-- GridSplitter for console -->
@@ -105,3 +119,4 @@
 
     </Grid>
 </Window>
+
