--- a/src/WpfEditor/View/Templates/GeneralTemplate.xaml
+++ b/src/WpfEditor/View/Templates/GeneralTemplate.xaml
@@ -1,9 +1,22 @@
-﻿<ResourceDictionary
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="http://schemas.panthernet.ru/graphx/">
+﻿<!-- 
+* Copyright 2017-2018 REAL.NET group
 
-    <ControlTemplate x:Key="NodeVertex"></ControlTemplate>
+* Licensed under the Apache License, Version 2.0 (the "License");
+* you may not use this file except in compliance with the License.
+* You may obtain a copy of the License at
+*
+* http://www.apache.org/licenses/LICENSE-2.0
+*
+* Unless required by applicable law or agreed to in writing, software
+* distributed under the License is distributed on an "AS IS" BASIS,
+* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+* See the License for the specific language governing permissions and
+* limitations under the License. -->
+
+<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="http://schemas.panthernet.ru/graphx/">
 
     <!-- VERTEX CONTROL -->
     <Style TargetType="{x:Type controls:VertexControl}">
@@ -15,7 +28,11 @@
                 <ControlTemplate TargetType="{x:Type controls:VertexControl}">
                     <Grid>
                         <Image Source="{Binding Picture}" Margin="0" Width="80" Stretch="UniformToFill"/>
-                        <controls:VertexLabelControl x:Name="PART_vertexLabel" Content="{Binding Name}" LabelPositionSide="Bottom" FontFamily="Lucida Sans Regular" />
+                        <controls:VertexLabelControl 
+                            x:Name="PART_vertexLabel" 
+                            Content="{Binding Name}" 
+                            LabelPositionSide="Bottom" 
+                            FontFamily="Lucida Sans Regular" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
@@ -31,12 +48,14 @@
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type controls:VertexControl}">
                             <Border Background="{TemplateBinding Background}"
-                                        BorderBrush="{TemplateBinding BorderBrush}"
-                                        CornerRadius="0,0,0,0"
-                                        Padding="{TemplateBinding Padding}">
+                                BorderBrush="{TemplateBinding BorderBrush}"
+                                CornerRadius="0,0,0,0"
+                                Padding="{TemplateBinding Padding}">
                                 <Grid>
                                     <ContentPresenter Content="{TemplateBinding Vertex}" />
-                                    <controls:VertexLabelControl x:Name="PART_vertexLabel" Content="{Binding Vertex, RelativeSource={RelativeSource TemplatedParent}}" />
+                                    <controls:VertexLabelControl 
+                                        x:Name="PART_vertexLabel" 
+                                        Content="{Binding Vertex, RelativeSource={RelativeSource TemplatedParent}}" />
                                 </Grid>
                             </Border>
                         </ControlTemplate>
@@ -47,16 +66,21 @@
         </Style.Triggers>
     </Style>
 
-    <controls:VisibilityToBoolConverter Inverted="True" Not="True" x:Key="BooleanToVisibility"/>
-
     <ControlTemplate x:Key="GeneralizationEdge" TargetType="{x:Type controls:EdgeControl}">
         <Grid>
             <Path Stroke="Black"
-                              StrokeThickness="2"
-                              ToolTip="{TemplateBinding ToolTip}" 
-                              x:Name="PART_edgePath"/>
+                StrokeThickness="2"
+                ToolTip="{TemplateBinding ToolTip}" 
+                x:Name="PART_edgePath"/>
             <controls:DefaultEdgePointer NeedRotation="true" x:Name="PART_EdgePointerForTarget" >
-                <Path Data="M0,0.5 L1,1 1,0 0,0.5" Fill="White" Stretch="Uniform" Width="15" Height="15" Stroke="Black" StrokeThickness="2" />
+                <Path 
+                    Data="M0,0.5 L1,1 1,0 0,0.5" 
+                    Fill="White" 
+                    Stretch="Uniform" 
+                    Width="15" 
+                    Height="15" 
+                    Stroke="Black" 
+                    StrokeThickness="2" />
             </controls:DefaultEdgePointer>
             <Path x:Name="PART_SelfLoopedEdge" 
                               Width="10" 
@@ -64,7 +88,7 @@
                               Stretch="Uniform" 
                               Fill="Black" 
                               IsHitTestVisible="True"
-                              ToolTip="This vertex has some self looped edgeViewModels!"
+                              ToolTip="This vertex has some self looped edges!"
                               Data="F1 M 17.4167,32.25L 32.9107,32.25L 38,18L 43.0893,32.25L 58.5833,32.25L 45.6798,41.4944L 51.4583,56L 38,48.0833L 26.125,56L 30.5979,41.7104L 17.4167,32.25 Z "/>
         </Grid>
     </ControlTemplate>
@@ -72,29 +96,29 @@
     <ControlTemplate x:Key="AssociationEdge" TargetType="{x:Type controls:EdgeControl}">
         <Grid>
             <Path Stroke="Blue"
-                              StrokeThickness="2"
-                              ToolTip="{TemplateBinding ToolTip}" 
-                              x:Name="PART_edgePath"/>
+                StrokeThickness="2"
+                ToolTip="{TemplateBinding ToolTip}" 
+                x:Name="PART_edgePath"/>
             <controls:DefaultEdgePointer NeedRotation="true" x:Name="PART_EdgePointerForTarget" >
                 <Path Data="M0,0.5 L1,1 M1,0 L0,0.5" Stretch="Uniform" Width="15" Height="15" Stroke="Black" StrokeThickness="2"/>
             </controls:DefaultEdgePointer>
             <Path x:Name="PART_SelfLoopedEdge" 
-                              Width="10" 
-                              Height="10" 
-                              Stretch="Uniform" 
-                              Fill="Blue" 
-                              IsHitTestVisible="True"
-                              ToolTip="This vertex has some self looped edgeViewModels!"
-                              Data="F1 M 17.4167,32.25L 32.9107,32.25L 38,18L 43.0893,32.25L 58.5833,32.25L 45.6798,41.4944L 51.4583,56L 38,48.0833L 26.125,56L 30.5979,41.7104L 17.4167,32.25 Z "/>
+                Width="10" 
+                Height="10" 
+                Stretch="Uniform" 
+                Fill="Blue" 
+                IsHitTestVisible="True"
+                ToolTip="This vertex has some self looped edges!"
+                Data="F1 M 17.4167,32.25L 32.9107,32.25L 38,18L 43.0893,32.25L 58.5833,32.25L 45.6798,41.4944L 51.4583,56L 38,48.0833L 26.125,56L 30.5979,41.7104L 17.4167,32.25 Z "/>
         </Grid>
     </ControlTemplate>
 
     <ControlTemplate x:Key="AttributeEdge" TargetType="{x:Type controls:EdgeControl}">
         <Grid>
             <Path Stroke="Green" 
-                              StrokeThickness="1"
-                              ToolTip="{TemplateBinding ToolTip}" 
-                              x:Name="PART_edgePath"/>
+                StrokeThickness="1"
+                ToolTip="{TemplateBinding ToolTip}" 
+                x:Name="PART_edgePath"/>
             <controls:DefaultEdgePointer NeedRotation="true" x:Name="PART_EdgePointerForTarget" >
                 <Path Data="M0,0.5 L1,1 M1,0 L0,0.5" Stretch="Uniform" Width="15" Height="15" Stroke="Black" StrokeThickness="2"/>
             </controls:DefaultEdgePointer>
@@ -102,22 +126,22 @@
             <controls:EdgeLabelControl x:Name="PART_edgeLabel" Content="&lt;&lt;attribute&gt;&gt;" />
 
             <Path x:Name="PART_SelfLoopedEdge" 
-                              Width="10" 
-                              Height="10" 
-                              Stretch="Uniform" 
-                              Fill="Green" 
-                              IsHitTestVisible="True"
-                              ToolTip="This vertex has some self looped edgeViewModels!"
-                              Data="F1 M 17.4167,32.25L 32.9107,32.25L 38,18L 43.0893,32.25L 58.5833,32.25L 45.6798,41.4944L 51.4583,56L 38,48.0833L 26.125,56L 30.5979,41.7104L 17.4167,32.25 Z "/>
+                Width="10" 
+                Height="10" 
+                Stretch="Uniform" 
+                Fill="Green" 
+                IsHitTestVisible="True"
+                ToolTip="This vertex has some self looped edges!"
+                Data="F1 M 17.4167,32.25L 32.9107,32.25L 38,18L 43.0893,32.25L 58.5833,32.25L 45.6798,41.4944L 51.4583,56L 38,48.0833L 26.125,56L 30.5979,41.7104L 17.4167,32.25 Z "/>
         </Grid>
     </ControlTemplate>
 
     <ControlTemplate x:Key="TypeEdge" TargetType="{x:Type controls:EdgeControl}">
         <Grid>
             <Path Stroke="Blue"
-                              StrokeThickness="2"
-                              ToolTip="{TemplateBinding ToolTip}" 
-                              x:Name="PART_edgePath"/>
+                StrokeThickness="2"
+                ToolTip="{TemplateBinding ToolTip}" 
+                x:Name="PART_edgePath"/>
             <controls:DefaultEdgePointer NeedRotation="true" x:Name="PART_EdgePointerForTarget" >
                 <Path Data="M0,0.5 L1,1 M1,0 L0,0.5" Stretch="Uniform" Width="15" Height="15" Stroke="Black" StrokeThickness="2"/>
             </controls:DefaultEdgePointer>
@@ -125,13 +149,13 @@
             <controls:EdgeLabelControl x:Name="PART_edgeLabel" Content="&lt;&lt;type&gt;&gt;" />
 
             <Path x:Name="PART_SelfLoopedEdge" 
-                              Width="10" 
-                              Height="10" 
-                              Stretch="Uniform" 
-                              Fill="Blue" 
-                              IsHitTestVisible="True"
-                              ToolTip="This vertex has some self looped edgeViewModels!"
-                              Data="F1 M 17.4167,32.25L 32.9107,32.25L 38,18L 43.0893,32.25L 58.5833,32.25L 45.6798,41.4944L 51.4583,56L 38,48.0833L 26.125,56L 30.5979,41.7104L 17.4167,32.25 Z "/>
+                Width="10" 
+                Height="10" 
+                Stretch="Uniform" 
+                Fill="Blue" 
+                IsHitTestVisible="True"
+                ToolTip="This vertex has some self looped edges!"
+                Data="F1 M 17.4167,32.25L 32.9107,32.25L 38,18L 43.0893,32.25L 58.5833,32.25L 45.6798,41.4944L 51.4583,56L 38,48.0833L 26.125,56L 30.5979,41.7104L 17.4167,32.25 Z "/>
         </Grid>
     </ControlTemplate>
 
