--- a/src/WpfEditor/View/MainWindow.xaml
+++ b/src/WpfEditor/View/MainWindow.xaml
@@ -13,16 +13,18 @@
 * See the License for the specific language governing permissions and
 * limitations under the License. -->
     
-<Window x:Class="WpfEditor.View.MainWindow" x:ClassModifier="internal"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:graphx="http://schemas.panthernet.ru/graphx/"
-        xmlns:view="clr-namespace:WpfEditor.View"
-        Title="REAL.NET"
-        mc:Ignorable="d"
-        Height="600" Width="800">
+<Window 
+    x:Class="WpfEditor.View.MainWindow" 
+    x:ClassModifier="internal"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:graphx="http://schemas.panthernet.ru/graphx/"
+    xmlns:view="clr-namespace:WpfEditor.View"
+    Title="REAL.NET"
+    mc:Ignorable="d"
+    Height="600" Width="800">
 
     <Grid>
         <Grid.Resources>
@@ -39,7 +41,6 @@
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
 
-        <!-- Column = 0 -->
         <!-- Area and console -->
         <Grid Grid.Column="0">
 
@@ -78,12 +79,10 @@
 
         </Grid>
 
-        <!-- Colunm = 1 -->
-        <!-- GridSplitter for RightPannel-->
+        <!-- GridSplitter for RightPanel-->
         <GridSplitter Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="5"/>
 
-        <!-- Column = 2 -->
-        <!-- RightPannel -->
+        <!-- RightPanel -->
         <DockPanel Grid.Column="2">
             <Grid x:Name="rightPanel">
                 <Grid.RowDefinitions>
@@ -93,9 +92,10 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto" MinHeight="50"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <Grid x:Name="paletteGrid" Grid.Row="1"></Grid>
+                <Grid x:Name="paletteGrid" Grid.Row="1"/>
                 <Label x:Name="elementsListLabel" Grid.Row="2" Content="Elements:" HorizontalAlignment="Stretch"/>
                 <ListBox x:Name="elementsListBox" Grid.Row="3"/>
                 <Label x:Name="selectedEntityLabel" Grid.Row="4" Content="Selected entity:" HorizontalAlignment="Stretch" />
@@ -107,12 +107,13 @@
                         <DataGridTextColumn Header="Value" IsReadOnly="False" Binding="{Binding Value}"/>
                     </DataGrid.Columns>
                 </DataGrid>
-                <Button Content="Constraints"
-                        HorizontalAlignment="Left"
-                        Margin="0,585,0,-505"
-                        VerticalAlignment="Top"
-                        Width="118"
-                        Click="ConstraintsButtonClick"/>
+
+                <Button 
+                    Grid.Row="6"
+                    Content="Constraints"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch"
+                    Click="ConstraintsButtonClick"/>
             </Grid>
 
         </DockPanel>
